--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <select id="topicSelect">
         <option value="">請選擇</option>
         <option value="血糖監測">血糖監測</option>
-        <option value="輸血安全">輸血安全</option>
-        <option value="利尿劑">利尿劑</option>
-        <option value="抗生素">抗生素</option>
-        <option value="氧氣">氧氣</option>
+        <option value="禁食">禁食</option>
+        <option value="翻身">翻身</option>
+        <option value="安眠藥">安眠藥</option>
+        <option value="抽痰">抽痰</option>
       </select>
     </div>
 
