--- a/Launcher.html
+++ b/Launcher.html
@@ -76,7 +76,7 @@
       }
 
       // 這裡換成你自己 Github Pages 的專案路徑
-      const baseUrl = "https://tc000013787.github.io/gitmind/Dashboard.html";
+      const baseUrl = "https://linexepa.github.io/gitmind/Dashboard.html";
       const url = `${baseUrl}?topic=${encodeURIComponent(topic)}&group=${group}`;
 
       document.getElementById('preview').src = url;
