--- a/Dashboard.html
+++ b/Dashboard.html
@@ -41,7 +41,7 @@
 
 <script>
   // ⛳ 換成你的 Apps Script /exec（與 index.html 同一條）
-  const API_URL = 'https://script.google.com/macros/s/你的_EXEC_網址/exec';
+  const API_URL = 'https://script.google.com/macros/s/AKfycbxo0KhEWoVMpfATaF760teggaREGWtaAoCAfPc039fpHTAjVSID7e-nUyl8Npi2yDhQ/exec';
 
   const sp = new URLSearchParams(location.search);
   const topic = sp.get('topic') || '未命名主題';
