--- a/Dashboard.html
+++ b/Dashboard.html
@@ -23,7 +23,7 @@
 </style>
 </head>
 <body>
-  <h1 id="h1">🌸 護理臨床推理看板</h1>
+  <h1 id="h1">🌸 九宮格看板</h1>
   <div class="card">
     <div class="title">
       <span class="pill" id="topicPill">主題</span>
@@ -104,5 +104,3 @@
 </script>
 </body>
 </html>
-
-
